# oboe-mcp

./: .gitignore  .markdownlintignore  BUG_oboe-session-path-handling.md  CHANGELOG.md  LICENSE  LINKEDIN-POST.linkedin.txt  LINKEDIN-POST.md  LINKEDIN_POST.md  README.md  install.sh  pyproject.toml  pytest_output.txt
.github/: obo_sessions
.github/instructions/: release-workflow.instructions.md
.github/oboe_sessions/: index.json  session_20260411_120000.json  session_20260422_175642.json
.github/prompts/: dry-run-pypi-release.prompt.md  publish-pypi-release.prompt.md  triage-release-blockers.prompt.md
.github/workflows/: codeql.yml  publish.yml
.specstory/: statistics.json
.specstory/history/: 2026-03-23_19-19-44Z-investigating-obomcp-feature-gaps-and-agent-behavior.md  2026-03-23_20-23-32Z-checking-completion-of-implementation-plan-file.md  2026-03-24_17-45-50Z-updating-linkedin-post-with-readme-information.md
docs/: PYPI_RELEASE.md  SESSION_FORMAT.md
inst/: migrate-to-oboe.sh
src/obo_mcp/: __init__.py  server.py  session.py
src/oboe_mcp/: __init__.py  cli.py  server.py  session.py
templates/agent-setup/: AGENTS.md  CLAUDE.md
templates/agent-setup/copilot/: copilot-instructions.md
templates/agent-setup/copilot/prompts/: obo.prompt.md
templates/agent-setup/copilot/skills/one-by-one/: SKILL.md
tests/: __init__.py  test_cli.py  test_server.py  test_session.py
