[project]
name = "obo-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["mcp>=1.0"]

[project.scripts]
obo-mcp = "obo_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/obo_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
