[project]
name = "oboe-mcp"
version = "0.1.0"
description = "MCP server for durable one-by-one review workflows, with prioritized session state for coding agents."
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.11"
dependencies = ["mcp>=1.0"]

[project.scripts]
oboe-mcp = "oboe_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oboe_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]

[[tool.mypy.overrides]]
module = ["oboe_mcp", "oboe_mcp.*"]
ignore_missing_imports = true
